
	* add_tracker() function added to torrent_handle
	* if there is no working tracker, current_tracker is the
	  tracker that is currently being tried
	* torrents that are checking can now be paused, which will
	  pause the checking
	* introduced another torrent state, checking_resume_data, which
	  the torrent is in when it's first added, and is comparing
	  the files on disk with the resume data
	* DHT bandwidth usage optimizations
	* rate limited DHT send socket
	* tracker connections are now also subject to IP filtering
	* improved optimistic unchoke logic
	* added monitoring of the DHT lookups
	* added bandwidth reports for estimated TCP/IP overhead and DHT
	* includes DHT traffic in the rate limiter

release 0.14.1

	* added converter for python unicode strings to utf-8 paths
	* fixed bug in http downloader where the host field did not
	  include the port number
	* fixed headers to not depend on NDEBUG, which would prohibit
	  linking a release build of libtorrent against a debug application
	* fixed bug in disk I/O thread that would make the thread
	  sometimes quit when an error occurred
	* fixed DHT bug
	* fixed potential shutdown crash in disk_io_thread
	* fixed usage of deprecated boost.filsystem functions
	* fixed http_connection unit test
	* fixed bug in DHT when a DHT state was loaded
	* made rate limiter change in 0.14 optional (to take estimated
	  TCP/IP overhead into account)
	* made the python plugin buildable through the makefile
	* fixed UPnP bug when url base ended with a slash and
	  path started with a slash
	* fixed various potentially leaking exceptions
	* fixed problem with removing torrents that are checking
	* fixed documentation bug regarding save_resume_data()
	* added missing documentation on torrent creation
	* fixed bugs in python client examples
	* fixed missing dependency in package-config file
	* fixed shared geoip linking in Jamfile
	* fixed python bindings build on windows and made it possible
	  to generate a windows installer